@@ -1,7 +1,7 @@
 ActionController::Routing::Routes.draw do |map|
   map.devise_for :users
   map.devise_for :admin, :as => 'admin_area'
-  map.devise_for :accounts, :scope => 'manager', :path_prefix => '/:locale',
+  map.devise_for :accounts, :scope => 'manager', :path_prefix => ':locale',
     :class_name => "User", :requirements => { :extra => 'value' }, :path_names => {
       :sign_in => 'login', :sign_out => 'logout', :password => 'secret',
       :confirmation => 'verification', :unlock => 'unblock'
